Add an endpoint to get the balance of a specified user
